# record

./: README.md
capture_window/: CMakeLists.txt  capture_window.cpp  co.cpp  displaypng.cpp  draw_string.cpp  image _copy.cpp  qx.cpp  record_by_image.cpp
